--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
 body {
-
+background-color: antiquewhite;
 }
+
+h2 { 
+color: black;
+text-align: center;
+  font-size: 50px;
+letter-spacing: 10px; 
+  img: {  
+  width: 30%
+}
+  
+  nav {
+    list-style-type: none;
+    position: fixed;
+    background-color: antiquewhite
+    width: 100%;
+    top: 0;
+    left: 0;
+    
+  }
+  
+  li {
+    display: incline;
+    padding: 30%
+      
+  }
+  li:hover {
+    background-color: black;
+  
+  }
+  a {
+    text-decoration: none;
+    color: darkslategray;
+  }
