--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
   <head> <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="link to image">
+  <nav>
+        <li><a href="index.html"> HOME </a </li>
+          <li><a href="TITLE.html"> APPS </a></li>
+          <li><a href="https://studio.code.org/projects"> CODE </a></li>
+          </nav>
 
 background-color: antiquewhite;
 }
